--- a/_config.yml
+++ b/_config.yml
@@ -6,9 +6,9 @@
 # https://learn-the-web.algonquindesign.ca/topics/markdown-yaml-cheat-sheet/#yaml
 # https://learnxinyminutes.com/docs/yaml/
 
-title: Edit _config.yml to set your title!
-description: This is where the description of your site will go. You should change it by editing the _config.yml file. It can be as long as you like! Happy blogging... ❤
-github_username: jph00
+title: The Data2Dollars Diary
+description: This blog is where I post projects that I think are interesting to share as I learn more data science.
+github_username: Data2Dollars
 
 # Email and twitter are optional:
 email:
